--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.9'
 
 services:
-  flutter:
-    build:
-      context: .
-      dockerfile: ./docker/flutter/Dockerfile
-    ports:
-      - "8888:8888"
-    volumes:
-      - .:/build
-    # command: flutter run -d web-server --web-port=8888 --web-hostname 0.0.0.0
-    tty: true
-    stdin_open: true
+  # flutter:
+  #   build:
+  #     context: .
+  #     dockerfile: ./docker/flutter/Dockerfile
+  #   ports:
+  #     - "8888:8888"
+  #   volumes:
+  #     - .:/build
+  #   # command: flutter run -d web-server --web-port=8888 --web-hostname 0.0.0.0
+  #   tty: true
+  #   stdin_open: true
   firebase:
     build:
       context: .
