--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.19.1
   firebase_auth: ^3.4.1
+  cloud_firestore: ^3.5.1
   firebase_core_platform_interface: 4.5.1
 
   hooks_riverpod: ^1.0.3
 
   simple_logger: ^1.9.0+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
