--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
   cloud_firestore: ^3.5.1
   firebase_core_platform_interface: 4.5.1
 
-  hooks_riverpod: ^1.0.3
+  # hooks_riverpod: ^1.0.3
 
   simple_logger: ^1.9.0+2
+  hooks_riverpod: ^2.2.0
 
 dev_dependencies:
   flutter_test:
