--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,12 @@ dependencies:
   cloud_firestore: ^3.5.1
   firebase_core_platform_interface: 4.5.1
 
-  # hooks_riverpod: ^1.0.3
-
   simple_logger: ^1.9.0+2
   hooks_riverpod: ^2.2.0
   freezed_annotation: ^2.2.0
+  image_picker_web: ^3.0.0+1
+  firebase_storage: ^10.3.11
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
